--- a/styles/fields/buttons.css
+++ b/styles/fields/buttons.css
@@ -5,6 +5,8 @@ button {
   padding: 0.75rem 1.5rem;
   border-radius: 0.5rem;
   cursor: pointer;
+  text-align: center;
+  font-size: 0.875rem;
 
   &.btn-primary {
     color: white;
@@ -17,13 +19,23 @@ button {
   }
 
   &.btn-secondary {
-    margin-left: auto;
     border: 1px solid var(--text-highlight);
 
     &:hover,
     &:focus {
       color: #e43a12;
       outline: 0.25rem solid var(--surface-secondary);
+    }
+  }
+}
+
+/* Desktop */
+@media (min-width: 1024px) {
+  button {
+    font-size: 1rem;
+
+    &.btn-secondary {
+      margin-left: auto;
     }
   }
 }
