--- a/styles/fields/radio.css
+++ b/styles/fields/radio.css
@@ -1,55 +1,65 @@
 label + .radio-wrapper {
-  margin-top: 1rem;
+  margin-top: 0.75rem;
 }
+
 .radio-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(7.5rem, 1fr));
-  gap: 1rem;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 0.75rem;
 }
+
 .radio-inner {
-
   border: 1px solid var(--stroke-default);
-  border-radius: .5rem;
-
+  border-radius: 0.5rem;
   display: grid;
   justify-items: center;
-  gap: .5rem;
-
-  padding: 2rem .5rem .5rem;
-
+  gap: 0.5rem;
+  padding: 1.5rem 0.5rem 0.5rem;
   position: relative;
-  & input,
-  & input:focus,
-  & input:hover {
+
+  & input {
     all: unset;
     position: absolute;
     inset: 0;
   }
+
   .radio-image {
-    background-image:url(../../assets/icons/radio-default.svg);
-    
-    width: 1.5rem;
-    height: 1.5rem;
-
-    position:absolute;
-    top: .5rem;
-    left: .5rem;
+    background-image: url(../../assets/icons/radio-default.svg);
+    width: 1.25rem;
+    height: 1.25rem;
+    position: absolute;
+    top: 0.5rem;
+    left: 0.5rem;
   }
 
-  &:hover, &:focus-within {
-    border: 1px solid var(--stroke-highlight);
-    & .radio-image {
-      background-image: url(../../assets/icons/radio-hover.svg);
+  & img {
+    width: 24px;
+    height: 24px;
+  }
+
+  & label {
+    font-size: 0.75rem;
+    text-align: center;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1024px) {
+  .radio-wrapper {
+    grid-template-columns: repeat(auto-fit, minmax(7.5rem, 1fr));
+    gap: 1rem;
+  }
+
+  .radio-inner {
+    padding: 2rem 0.5rem 0.5rem;
+
+    & img {
+      width: 32px;
+      height: 32px;
     }
-  
-  }
 
-  &:has(:checked){
-    border: 2px solid var(--stroke-highlight);
-
-    & .radio-image {
-      background-image: url(../../assets/icons/radio-checked.svg);
+    & label {
+      font-size: 0.875rem;
     }
   }
-
 }
