--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,48 +1,104 @@
 #app {
   display: grid;
-  grid-template-columns: 51.25% 48.75%;
-
+  grid-template-columns: 1fr;
   height: 100vh;
-  overflow: hidden;
+  overflow: auto;
 }
 
 main {
   overflow: auto;
-  padding: 3rem;
+  padding: 1.5rem 1rem;
 
   & .main-container {
-    max-width: 33rem;
-    margin-left: auto;
+    max-width: 100%;
+    margin: 0 auto;
   }
-  & .back {
+  
+  & #back {
     display: flex;
     align-items: center;
     gap: 0.5rem;
     margin-bottom: 1.5rem;
+    cursor: pointer;
   }
 
   & h1 {
-    font: 600 1.5rem/1.25 var(--font-family);
+    font: 600 1.25rem/1.25 var(--font-family);
     margin-bottom: 0.5rem;
+  }
+  
+  & p {
+    font-size: 0.875rem;
   }
 }
 
 aside {
   background-color: var(--surface-secondary);
-  padding: 4rem;
+  padding: 2rem 1rem;
+  display: none;
 
   & .aside-container {
-    max-width: 31rem;
+    max-width: 100%;
+    text-align: center;
+    
     & > img {
-      margin-top: 2rem;
+      margin-top: 1.5rem;
+      max-width: 280px;
     }
   }
+  
   & h2 {
-    font: 600 2.5rem/1.25 var(--font-family);
+    font: 600 1.5rem/1.25 var(--font-family);
     margin-bottom: 0.5rem;
 
     & span {
       color: var(--text-highlight);
+    }
+  }
+  
+  & p {
+    font-size: 0.875rem;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1024px) {
+  #app {
+    grid-template-columns: 51.25% 48.75%;
+    overflow: hidden;
+  }
+  
+  main {
+    padding: 3rem;
+    
+    & .main-container {
+      max-width: 33rem;
+      margin-left: auto;
+    }
+    
+    & h1 {
+      font-size: 1.5rem;
+    }
+    
+    & p {
+      font-size: 1rem;
+    }
+  }
+  
+  aside {
+    display: block;
+    padding: 4rem;
+    
+    & .aside-container {
+      max-width: 31rem;
+    }
+    
+    & h2 {
+      font-size: 2.5rem;
+    }
+    
+    & p {
+      font-size: 1rem;
     }
   }
 }
